# refrax

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.ipynb
.github/workflows/: docs.yml  publish.yml  tests.yml
api/lens/: index.html
api/traversal/: index.html
docs/: license.md
docs/api/: lens.md  mixin.md  traversal.md
license/: index.html
refrax/: __init__.py  custom_types.py  lens.py  mixin.py  traversal.py  utils.py
search/: search_index.json
tests/: conftest.py  test_lens.py  test_optics.py  test_traversal.py  test_utils.py
